_sass/page.scss
/* ... */
.navicon-lines-button.x.active .navicon-lines {
	// hide the middle line
	background: transparent;
	// overlap the lines by setting both their top values to 0
	&:before,
	&:after {
		-webkit-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
		top: 0;
		width: $button-size;
	}
	// rotate the lines to form the x shape
	&:before {
		-webkit-transform: rotate3d(0,0,1,45deg);
		transform: rotate3d(0,0,1,45deg);
	}
	&:after {
		-webkit-transform: rotate3d(0,0,1,-45deg);
		transform: rotate3d(0,0,1,-45deg);
	}
}
// Style the toggle menu link and hide it
.nav .navtoggle {
	@include font-rem(18);
	font-weight: normal;
	background-color: $black;
	color: $white;
	border: none;
	cursor: pointer;
	@media #{$small} {
		display: none;
	}
}
.nav button {
	border: none;
	background: none;
}
.navtoggle i {
	z-index:-1;
}
.icon-menu {
	position: relative;
	top: 3px;
	line-height: 0;
}
// When JavaScript is disabled, we hide the toggle button
.no-js .nav .navtoggle {
	display: none;
}
// When JavaScript is disabled, we show the menu
.no-js .nav ul {
	max-height: 30em;
	overflow: hidden;
}
// When JavaScript is enabled, we hide the menu
.js .nav ul {
	max-height: 0;
	overflow: hidden;
	@media #{$small} {
		max-height: 30em;
	}
}
// Displaying the menu when the user has clicked on the button
.js .nav .active + ul {
	max-height: 30em;
	overflow: hidden;
	-webkit-transition: max-height .4s;
	-moz-transition: max-height .4s;
	-o-transition: max-height .4s;
	-ms-transition: max-height .4s;
	transition: max-height .4s;
}

/* Main content */
#main {
	counter-reset: captions;
	@include container;
	@include clearfix;
	clear: both;
	margin-top: 2em;
	h1 {
		margin-top: 0;
	}
	.post,
	.page {
		@include container;
		@include grid(12,10);
		@include prefix(12,1);
		@include suffix(12,1);
		margin-bottom: 2em;
		@media #{$small} {
			@include grid(12,6);
			@include prefix(12,0);
			@include suffix(12,0);
		}
		@media #{$x-large} {
			@include grid(12,4.5);
		}
	}
}

/* Index listing specific styling */
#index {
	@include container;
	@include grid(12,10);
	@include prefix(12,1);
	@include suffix(12,1);
	margin-bottom: 2em;
	@media #{$small} {
		@include grid(12,6);
		@include prefix(12,0);
		@include suffix(12,0);
	}
	@media #{$x-large} {
		@include grid(12,4.5);
	}
	h3 {
		margin: 0;
		padding-bottom: .5em;
		@include font-rem(28);
		border-bottom: 1px solid lighten($black,70);
	}
	article {
		h2 {
			margin-bottom: 4px;
			@include font-rem(20);
			&.link-post {
				margin-bottom: 0px + $doc-line-height;
				margin-bottom: 0rem + ($doc-line-height / $doc-font-size);
			}
		}
		p {
			@include font-rem(14);
		}
		p+p {
			text-indent: 0;
		}
	}
}

/* Large feature header image */
.image-wrap {
	position: relative;
	margin-bottom: 2em;
	@include clearfix;
	&:after {
		content: " ";
		display: block;
		position: absolute;
		bottom: 0;
		left: 8%;
		width: 0;
		height: 0;
		border: 10px solid transparent;
		border-bottom-color: $bodycolor;
		@media #{$small} {
			left: 25%;
		}
		@media #{$large} {
			border-width: 20px;
		}
		@media #{$x-large} {
			left: 33.333333333%;
		}
	}
	img {
		width: 100%;
		height: auto;
		-ms-interpolation-mode: bicubic;
	}
	.headline-wrap {
		position: absolute;
		bottom: 25px;
		@include prefix(12,1);
		@media #{$small} {
			left: 25%;
			margin-left: 0;
		}
		@media #{$x-large} {
			@include prefix(12,1);
		}
		h1, h2 {
			color: $white;
			@include text-shadow(0 1px 2px rgba(0,0,0,.25));
		}
	}
}

/* Post byline */
.byline {
	clear: both;
	font-size: 80%;
}
.article-author-side,
.article-author-bottom {
	h3 {
		margin-bottom: 0;
	}
	p {
		font-size: 80%;
		font-style: italic;
	}
	a, a:hover {
		border-bottom: 0 solid transparent;
	}
}

/* Default social media links in author sidebar */
.author-social {
  display: block;
  margin-bottom: 5px;
  @include font-rem(14);
  color: $black;
  &:visited {
    color: $black;
  }
  &:hover {
    @include scale(1.1);
  }
  &:active {
    @include translate(0, 2px);
  }
  .fa {
		margin-right: 5px;
	}
}

/* Author sidebar */
.article-author-side {
	display: none;
	.bio-photo {
		max-width: 110px;
		@include rounded(150px);
	}
	@media #{$small} {
		display: block;
		@include grid(12,2);
		@include prefix(12,0.5);
		@include suffix(12,0.5);
		h3,
		p,
		.author-social {
			display: block;
			max-width: 125px;
		}
		h3 {
			margin-top: 10px;
			margin-bottom: 10px;
		}
		p {
			margin-bottom: 20px;
		}
		.author-social {
			margin-bottom: 5px;
		}
	}
	@media #{$large} {
		h3,
		.bio-photo,
		p,
		.author-social {
			max-width: 150px;
		}
	}
	@media #{$x-large} {
		@include grid(12,1.5);
		@include prefix(12,2);
	}
}

/* Author sidebar main*/
.article-author-side-main {
  display: none;
  .bio-photo {
    max-width: 110px;
    @include rounded(10px);
  }
  @media #{$small} {
    display: block;
    @include grid(12,2);
    @include prefix(12,0.5);
    @include suffix(12,0.5);
    h3,
    p,
    .author-social {
      display: block;
      max-width: 125px;
    }
    h3 {
      margin-top: 10px;
      margin-bottom: 10px;
    }
    p {
      margin-bottom: 20px;
    }
    .author-social {
      margin-bottom: 5px;
    }
  }
  @media #{$large} {
    h3,
    .bio-photo,
    p,
    .author-social {
      max-width: 200px;
    }
  }
  @media #{$x-large} {
    @include grid(8,1.5);
    @include prefix(12,2);
  }
}

/* Author module - mobile only */
.article-author-bottom {
	margin-bottom: 1em;
	@media #{$small} {
		display: none;
	}
	.bio-photo {
		float: left;
		margin-right: 25px;
		max-width: 100px;
		@include rounded(150px);
	}
	.author-social {
		display: inline-block;
		margin-right: 10px;
	}
	@media #{$large} {
		h3,
		.bio-photo,
		p,
		.author-social {
			max-width: 150px;
		}
	}
}

/* Post content wrapper */
.article-wrap {
	// Dotted line underlines for links
	p > a,
	p > em > a,
	p > strong > a,
	li > a {
		text-decoration: underline;
	}
}
/* ... */

